# essential-plugins

./: .gitignore  Cargo.toml  README.md  aarch64-unknown-linux-gnu.sh  build-all-native.sh  build-all.sh  build-native.sh  bundler.toml  macos-pkg.sh  x86_64-unknown-linux-gnu.sh
.github/workflows/: build-and-test.yml  clippy.yml  linux.yml  macos.yml  rust.yml  windows.yml
_build-scripts/: Containerfile.aarch64-unknown-linux-gnu  Containerfile.x86_64-unknown-linux-gnu  build.sh  container.sh  packages.sh
packaging/: distribution.xml
plugins/editor/: Cargo.toml
plugins/editor/src/: lib.rs  params.rs  passthru.rs  record.rs
plugins/exporter/: Cargo.toml
plugins/exporter/src/: editor.rs  lib.rs
plugins/headphones/: Cargo.toml
plugins/headphones/src/: lib.rs
plugins/mono/: Cargo.toml
plugins/mono/src/: lib.rs
plugins/stereo/: Cargo.toml
plugins/stereo/src/: lib.rs
render/: Cargo.toml
render/src/: audio_input.rs  audio_output.rs  lib.rs  spatial_input.rs
shared/: Cargo.toml
shared/src/: lib.rs
source/: Cargo.toml
source/src/: lib.rs
xpans_spe_nice/: Cargo.toml
xpans_spe_nice/src/: lib.rs
xpans_spe_nih/: Cargo.toml
xpans_spe_nih/src/: lib.rs
xtask/: Cargo.toml
