[package]
name = "render"
version = "0.1.0"
edition = "2024"

[dependencies]
nice-plug = { git = "https://codeberg.org/BillyDM/nice-plug.git" }
xpans_spe_nice = { path = "../xpans_spe_nice" }
shared = { path = "../shared" }
xpans_render = "0.1.0"
xpans_violet = "0.1.0"
xpans_spe = "0.1.0"
num = "0.4.3"
wreath = "0.1.0"
