[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
# nih_plug_xtask = { git = "https://github.com/robbert-vdh/nih-plug.git" }

# This fork adds `bundle-only`.
nih_plug_xtask = { git = "https://github.com/benseigler/nih_plug_xtask.git", rev = "be3106bf701d85eae2a4cdf2b330427b7fcea987" }
