[package]
name = "editor"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[features]
default = ["clap", "vst3"]
clap = []
vst3 = []

[dependencies]
nice-plug = { git = "https://codeberg.org/BillyDM/nice-plug.git" }
shared = { path = "../../shared" }
xpans_spe_nice = { path = "../../xpans_spe_nice" }
