[package]
name = "exporter"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[features]
default = ["clap", "vst3"]
clap = []
vst3 = []

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git" }
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git"}
serde_yaml = "0.9.34"
rmp-serde = "1.3.0"
shared = { path = "../../shared" }
xpans_spe_nih = { path = "../../xpans_spe_nih" }
xpans_xsr = "0.1.0"
rfd = "0.15.0"
crossbeam-channel = "0.5.15"
