[package]
name = "exporter"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[features]
default = ["clap", "vst3"]
clap = []
vst3 = []

[dependencies]
nice-plug = { git = "https://codeberg.org/BillyDM/nice-plug.git" }
nice-plug-iced = { git = "https://codeberg.org/BillyDM/nice-plug.git"}
serde_yaml = "0.9.34"
rmp-serde = "1.3.0"
shared = { path = "../../shared" }
xpans_spe_nice = { path = "../../xpans_spe_nice" }
xpans_xsr = "0.1.0"
rfd = "0.15.0"
crossbeam-channel = "0.5.15"
