[package]
name = "exporter"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[features]
default = ["clap", "vst3"]
clap = []
vst3 = []

[dependencies]
nih_plug = { git = "https://codeberg.org/BillyDM/nih-plug.git", rev = "aad0bad18b5c4f82b69bfb3c80da7471854d7af0" }
nih_plug_iced = { git = "https://codeberg.org/BillyDM/nih-plug.git", rev = "aad0bad18b5c4f82b69bfb3c80da7471854d7af0" }
serde_yaml = "0.9.34"
rmp-serde = "1.3.0"
shared = { path = "../../shared" }
xpans_spe_nih = { path = "../../xpans_spe_nih" }
xpans_xsr = "0.1.0"
rfd = "0.15.0"
crossbeam-channel = "0.5.15"
