[package]
name = "headphones"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[features]
default = ["clap", "vst3"]
clap = []
vst3 = []

[dependencies]
nice-plug = { git = "https://codeberg.org/BillyDM/nice-plug.git" }
xpans_spe_nice = { path = "../../xpans_spe_nice" }
xpans_headphones = "0.1.0"
shared = { path = "../../shared" }
xpans_violet = { version = "0.1.0", default-features = false, features = ["interpolation"] }
render = { path = "../../render" }
