[package]
name = "headphones"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[features]
default = ["clap", "vst3"]
clap = []
vst3 = []

[dependencies]
nih_plug = { git = "https://codeberg.org/BillyDM/nih-plug.git", rev = "aad0bad18b5c4f82b69bfb3c80da7471854d7af0" }
xpans_spe_nih = { path = "../../xpans_spe_nih" }
xpans_headphones = "0.1.0"
shared = { path = "../../shared" }
xpans_violet = { version = "0.1.0", default-features = false, features = ["interpolation"] }
render = { path = "../../render" }
